tried to add toggle

--- a/ToDoList/Views/Tasks/OverdueTasks.cshtml
+++ b/ToDoList/Views/Tasks/OverdueTasks.cshtml
@@ -13,7 +13,7 @@
             @Html.DisplayNameFor(model => model.TaskDescription)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DueDate.Date)
+            @Html.DisplayNameFor(model => model.DueDate)
         </th>
         <th></th>
     </tr>
