--- a/ToDoList/Views/Tasks/Index.cshtml
+++ b/ToDoList/Views/Tasks/Index.cshtml
@@ -20,6 +20,7 @@
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.IsDone)
+            @Html.ActionLink("ToggleDone")
         </th>
         <th>
             @Html.DisplayNameFor(model => model.List.ListTitle)
@@ -35,25 +36,28 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsDone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.List.ListTitle)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TaskDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DueDate)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.TaskID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.TaskID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.TaskID })
-            </td>
-        </tr>
+        if (item.IsDone == false)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsDone)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.List.ListTitle)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TaskDescription)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DueDate)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.TaskID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.TaskID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.TaskID })
+                </td>
+            </tr>
+        }
     }
 
 </table>
