--- a/ToDoList/Views/Tasks/OverdueTasks.cshtml
+++ b/ToDoList/Views/Tasks/OverdueTasks.cshtml
@@ -24,7 +24,16 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.IsDone)
+                    <a href="@Url.Action("ToggleDone", new { id=item.TaskID })">
+                        @if (item.IsDone)
+                    {
+                            <span class="glyphicon glyphicon-check"></span>
+                        }
+                        else
+                        {
+                            <span class="glyphicon glyphicon-unchecked"></span>
+                        }
+                    </a>
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.List.ListTitle)
